kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alternacija
spec:
  selector:
    app: alternacija
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
