kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alternacija
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - alternacija.djnd.si
        - alternacija.danesjenovdan.si
      secretName: alternacija-tls
  rules:
    - host: alternacija.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alternacija
                port:
                  number: 80
    - host: alternacija.danesjenovdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alternacija
                port:
                  number: 80
